--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,112 +1,62 @@
 {% load static %}
 
-{# Variables par défaut #}
-{% static "img/user.svg" as icone_login_profil_gestion %}
-{% url 'accounts:signup' as nom_url %}
-{% if request.path == '/' %}
-    {# SI la page = accueil alors afficher la navtop #}
-    {# ************************** navtop sur accueuil (pc et mobile) **************************  #}
+{# Variables #}
+{% static "images/home.svg" as home_icon %}
+{% static "images/LITReview_text.png" as litreview_text_png %}
+{% static "images/feed.svg" as feed_icon %}
+{% static "images/posts.svg" as posts_icon %}
+{% static "images/follow_users.svg" as account_follow_icon %}
+{% static "images/logout.svg" as logout_icon %}
+{% url "index" as index_url %}
+{% url "logout" as logout_url %}
 
-    <div class="box-navtop">
-
-        <nav class="nav navtop container">
-
-            <div class="navtop-block">
-                <a class="nav-link active" href="{% url 'index' %}" data-toggle="tooltip" data-placement="right"
-                   title="Accueil">
-                    <img src="{% static 'img/home.svg' %}" alt="" class="icone-navbar">
-                </a>
-            </div>
-            <div class="navtop-block">
-                <a class="nav-link" href="{% url 'index' %}" data-toggle="tooltip" data-placement="right"
-                   title="Idéation">
-                    <div>
-                        <img src="{% static 'img/bulb.svg' %}" alt="" class="icone-navbar">
-                        <div class="nav-titre">{{ nav_titre_ideation }}</div>
-                    </div>
-                </a>
-                <a class="nav-link" href="{% url 'index' %}" data-toggle="tooltip" data-placement="right"
-                   title="Projets">
-                    <div>
-                        <img src="{% get_static_prefix %}images/thumbnails.svg" alt="" class="icone-navbar">
-                        <div class="nav-titre">{{ nav_titre_projet }}</div>
-                    </div>
-                </a>
-                <a class="nav-link" href="{% url 'index' %}" data-toggle="tooltip" data-placement="right" title="Carte">
-                    <div>
-                        <img src="{% static 'img/pin.svg' %}" alt="" class="icone-navbar">
-                        <div class="nav-titre">{{ nav_titre_carte }}</div>
-                    </div>
-                </a>
-            </div>
-            <div class="navtop-block">
-                <a class="nav-link" href="{{ nom_url }}" data-toggle="tooltip" data-placement="right"
-                   title="">
-                    <img src="{{ icone_login_profil_gestion }}" alt="" class="icone-navbar">
-                </a>
-            </div>
-        </nav>
-    </div>
-
-{% else %}
-
-    {# SINON afficher sur le coté sur grands/moyens écrans et en bas sur mobile #}
-
-    {# ************************** navside sur grand/moyen écrans ************************** #}
-
-    <div class="box-navside d-none d-sm-flex">
-
-        <nav class="nav navside">
-            <div>
-                <a class="nav-link" href="{% url 'index' %}" data-toggle="tooltip" data-placement="right"
-                   title="Accueil">
-                    <img src="{% static 'img/home.svg' %}" alt="" class="icone-navbar">
-                </a>
-            </div>
-            <div>
-                <a class="nav-link" href="{% url 'index' %}" data-toggle="tooltip" data-placement="right"
-                   title="Idéation">
-                    <img src="{% static 'img/bulb.svg' %}" alt="" class="icone-navbar">
-                </a>
-                <a class="nav-link" href="{% url 'index' %}" data-toggle="tooltip" data-placement="right"
-                   title="Projets">
-                    <img src="{% static 'img/thumbnails.svg' %}" alt="" class="icone-navbar">
-                </a>
-                <a class="nav-link" href="{% url 'index' %}" data-toggle="tooltip" data-placement="right" title="Carte">
-                    <img src="{% static 'img/pin.svg' %}" alt="" class="icone-navbar">
-                </a>
-            </div>
-            <div>
-                <a class="nav-link" href="{{ nom_url }}" data-toggle="tooltip" data-placement="right"
-                   title="">
-                    <img src="{{ icone_login_profil_gestion }}" alt="" class="icone-navbar">
-                </a>
-            </div>
-        </nav>
-
-    </div>
-
-    {# ************************** navbottom sur petits écrans ************************** #}
-
-    <div class="box-navbottom d-sm-none ">
-
-        <nav class="nav navbottom">
-            <a class="nav-link" href="{% url 'index' %}">
-                <img src="{% static 'img/home.svg' %}" alt="" class="icone-navbar">
+{# ************************** navtop big screens **************************  #}
+<div class="navtop-box d-none d-sm-block">
+    <nav class="nav navtop container">
+        <div class="navtop-block center-block">
+            <a class="nav-link active" href="{{ index_url }}" data-toggle="tooltip" data-placement="center"
+               title="Accueil">
+                <img src="{{ litreview_text_png }}" alt="" class="navbar-brand">
             </a>
-            <a class="nav-link" href="{% url 'index' %}">
-                <img src="{% static 'img/bulb.svg' %}" alt="" class="icone-navbar">
+        </div>
+        <div class="navtop-block">
+            <a class="nav-link" href="{{ index_url }}" data-toggle="tooltip" data-placement="right"
+               title="Mon flux">
+                <img src="{{ feed_icon }}" alt="" class="navbar-icon">
             </a>
-            <a class="nav-link" href="{% url 'index' %}">
-                <img src="{% static 'img/thumbnails.svg' %}" alt="" class="icone-navbar">
+            <a class="nav-link" href="{{ index_url }}" data-toggle="tooltip" data-placement="right"
+               title="Mes posts">
+                <img src="{{ posts_icon }}" alt="" class="navbar-icon">
             </a>
-            <a class="nav-link" href="{% url 'index' %}">
-                <img src="{% static 'img/pin.svg' %}" alt="" class="icone-navbar">
+            <a class="nav-link" href="{{ index_url }}" data-toggle="tooltip" data-placement="right"
+               title="Mes abonnements">
+                <img src="{{ account_follow_icon }}" alt="" class="navbar-icon">
             </a>
-            <a class="nav-link" href="{{ nom_url }}">
-                <img src="{{ icone_login_profil_gestion }}" alt="" class="icone-navbar">
+            <a class="nav-link" href="{{ logout_url }}" data-toggle="tooltip" data-placement="right"
+               title="Me deconnecter">
+                <img src="{{ logout_icon }}" alt="" class="navbar-icon">
             </a>
-        </nav>
-    </div>
+        </div>
+    </nav>
+</div>
 
-{% endif %}
+{# ************************** navbottom small screens ************************** #}
+<div class="navbottom-box d-sm-none ">
+    <nav class="nav navbottom">
+        <a class="nav-link" href="{{ index_url }}">
+            <img src="{{ home_icon }}" alt="" class="navbar-icon">
+        </a>
+        <a class="nav-link" href="{{ index_url }}">
+            <img src="{{ feed_icon }}" alt="" class="navbar-icon">
+        </a>
+        <a class="nav-link" href="{{ index_url }}">
+            <img src="{{ posts_icon }}" alt="" class="navbar-icon">
+        </a>
+        <a class="nav-link" href="{{ index_url }}">
+            <img src="{{ account_follow_icon }}" alt="" class="navbar-icon">
+        </a>
+        <a class="nav-link" href="{{ logout_url }}">
+            <img src="{{ logout_icon }}" alt="" class="navbar-icon">
+        </a>
+    </nav>
+</div>
