--- a/app/templates/new_review_without_ticket.html
+++ b/app/templates/new_review_without_ticket.html
@@ -1,4 +1,5 @@
 {% extends 'base_index.html' %}
+{% load bootstrap4 %}
 {% load static %}
 
 {% block title %}
@@ -6,12 +7,8 @@
 {% endblock title %}
 
 {% block content %}
-    {# Variables #}
-    {% url "new_review_without_ticket" as new_review_url %}
-    {% url "new_review_request" as new_review_request_url %}
 
     <div id="block-content-home">
-
         <!-- ************************** HEADER ************************** -->
         <header>
             {# NAVBAR MAIN TOP #}
@@ -22,32 +19,28 @@
         <div id="content-def-bp">
             <div class="center-block text-center">
                 <div class="col d-flex justify-content-center mb-4">
-                    <a class="btn btn-secondary btn-lg mr-2" href="{{ new_review_request_url }}">Demander une critique</a>
-                    <a class="btn btn-secondary btn-lg ml-2" href="{{ new_review_url }}">Créer une critique</a>
-                </div>
-                <div class="col d-flex justify-content-center mb-4">
-                    <div class="card bg-light mb-3">
-                        <div class="card-header">Flux</div>
-                        <div class="card-body">
-                            <h5 class="card-title">En cours de Développement</h5>
-                            <p class="card-text">Ici se trouvera le saint flux. Il sera fourni et utile et tout le monde (l'utilisateur loggué) s'en abreuvera quotidiennement.</p>
-                        </div>
-                    </div>
+                    <h1 class="titre-accounts">Creer une critique</h1>
                 </div>
             </div>
+            <form method="POST">
+                <h1 class="titre-accounts">Livre/Article</h1>
+                {% csrf_token %}
+                {% bootstrap_form new_review_request_form show_help=False %}
+                <h1 class="titre-accounts">Critique</h1>
+                {% csrf_token %}
+                {% bootstrap_form new_review_form show_help=False %}
+                <input type="submit" class="btn btn-dark bouton-accounts" value="Envoyer">
+            </form>
         </div>
         <footer id="footer" class="mt-5 py-5 bg-dark">
             <div class="container">
-
                 <div class="logo-footer mb-3">
                 </div>
-
                 <div class="menu-footer d-flex flex-column flex-md-row">
                     <a href="{% url 'feed' %}">Flux</a>
                     <a href="LITReview@adressequinexistepas.com">Contact</a>
 
                 </div>
-
                 <div class="text-center text-muted mt-4">
                     <span>
                         © Copyright 2021 -
