--- a/app/templates/feed.html
+++ b/app/templates/feed.html
@@ -116,8 +116,8 @@
                 </div>
 
                 <div class="menu-footer d-flex flex-column flex-md-row">
-                    <a href="{% url 'feed' %}">Flux</a>
-                    <a href="LITReview@adressequinexistepas.com">Contact</a>
+                    <a href="{% url 'posts' %}">Posts</a>
+                    <a href="#">Contact</a>
 
                 </div>
 
