--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -99,7 +99,7 @@
 
                 <div class="menu-footer d-flex flex-column flex-md-row">
                     <a href="{% url 'feed' %}">Flux</a>
-                    <a href="LITReview@adressequinexistepas.com">Contact</a>
+                    <a href="#">Contact</a>
                 </div>
                 <div class="text-center text-muted mt-4">
                     <span>
