--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -22,6 +22,32 @@ body {
     to {opacity: 0.0;}
 }
 
+.image-area {
+    border: 2px dashed rgb(56, 186, 105);
+    padding: 1rem;
+    position: relative;
+}
+
+.image-area::before {
+    content: "Aperçu de l'image";
+    color: rgb(56, 186, 105);
+    font-weight: bold;
+    text-transform: uppercase;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 0.8rem;
+    z-index: 1;
+}
+
+.image-area img {
+    z-index: 2;
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+}
+
 .blink {
     text-decoration: blink;
     animation-name: blinker;
