--- a/app/templates/new_review_request.html
+++ b/app/templates/new_review_request.html
@@ -23,6 +23,7 @@
             <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% bootstrap_form form show_help=False %}
+                <div class="image-area mt-4 mb-4"><img id="imageResult" src="#" alt="" class="img-fluid rounded shadow-sm mx-auto d-block"></div>
                 <input type="submit" class="btn btn-dark bouton-accounts" value="Envoyer">
             </form>
         </div>
@@ -46,6 +47,7 @@
                     </span>
                 </div>
             </div>
+            <script type="text/javascript" src="{% static "javascript/image_preview.js" %}"></script>
         </footer>
     </div>
 {% endblock content %}
